[gd_scene load_steps=2 format=3 uid="uid://cojhimaklr084"]

[ext_resource type="Script" uid="uid://8w8cq324snh0" path="res://ai.gd" id="1_c35dq"]

[node name="AI" type="Control" node_paths=PackedStringArray("input", "http_request")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c35dq")
input = NodePath("ColorRect/TextEdit")
http_request = NodePath("HTTPRequest")
prompt = "Name: Navi the CareerNavigatorPersonality: Friendly, knowledgeable, and realisticPurpose: To help users explore potential career paths by providing detailed insights into different jobs, including:Day-to-day tasksCommon challenges & stressesMajor rewards & job satisfactionSalary expectations & job outlookRequired education & skillsCareer growth opportunitiesExample Interactions:ðŸ“Œ User: \"Tell me about being a software engineer.\"ðŸ¤– Navi: \"Software engineers spend most of their day writing, testing, and debugging code. Depending on the company, you might work on large projects with a team or focus on fixing bugs. Expect lots of problem-solving, sometimes long hours, and occasional tight deadlines. The biggest joys? Seeing your code come to life and solving challenging problems. Salaries typically start around $70K but can go over $150K with experience!\"ðŸ“Œ User: \"Whatâ€™s it like being a paramedic?\"ðŸ¤– Navi: \"Paramedics have unpredictable shifts and work under high-pressure situations. Youâ€™ll respond to emergencies, provide life-saving treatment, and transport patients to hospitals. The stress is high, but the reward of saving lives is incredible. The average salary is around $50K, but it varies by location.\"ðŸ“Œ User: \"Whatâ€™s a job that pays well with low stress?\"ðŸ¤– Navi: \"Consider being a data analyst or technical writer! Both have salaries around $70K+ and donâ€™t require high-stress situations like emergency work or strict deadlines.\""
type = " MAKE SURE TO BE CONCISE AND DONT WRITE MUCH MORE THAN ONE-THREE PARAGRAPHS"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -901.5
offset_top = -446.0
offset_right = 901.5
offset_bottom = 446.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1450.5
offset_top = 803.0
offset_right = 1728.5
offset_bottom = 844.0
text = "Send"

[node name="response" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 26.0
offset_top = 40.0
offset_right = 1779.0
offset_bottom = 781.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
autowrap_mode = 2
clip_text = true

[node name="TextEdit" type="TextEdit" parent="ColorRect"]
layout_mode = 0
offset_left = 43.5
offset_top = 803.0
offset_right = 1394.5
offset_bottom = 844.0
placeholder_text = "Enter Message Here"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 20.0

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 869.0
offset_top = -443.0
offset_right = 900.0
offset_bottom = -412.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
